<resources>
    <string name="app_name">济南公交查询</string>
    
    <string name="menu_search_clear">清空查询记录</string>
    <string name="menu_change">换乘</string>
    <string name="menu_haoyun_bus">好运巴士</string>
    <string name="menu_setting">设置</string>

    
    <string name="pref_app">关于</string>
    <string name="pref_set">设置</string>
    <string name="pref_set_update">更新请求地址</string>
    <string name="pref_app_update">查看最新APP</string>
    <string name="app_update_url">https://fir.im/x8sg</string>
    <string name="haoyun_bus_url">http://www.esdjy.com.cn/quickly.html</string>

    <string name="app_update_dialog_title">更新应用</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_no">取消</string>
    <string name="pref_set_update_dialog_lastest">当前版本号即为最新版本，版本号：</string>
    <string name="pref_set_update_dialog_change_left">版本号已更新：</string>
    <string name="pref_set_update_ip_dialog_lastest">当前连接IP地址正确，地址为：</string>
    <string name="pref_set_update_ip_dialog_change_left">IP地址已更新：</string>
    <string name="pref_app_code_url">https://github.com/wendyxie327/JNBus</string>
    <string name="pref_app_code">GitHub源代码</string>
    <string name="pref_app_update_wifi_only_title">WIFI模式下更新</string>
    <string name="pref_app_update_wifi_only_body">只允许在WIFI模式下更新APP</string>
    <string name="nothing_exception">没有什么可以显示</string>


    <string name="preference_key_set_update">set_update</string>
    <string name="preference_key_app_version">app_version</string>
    <string name="preference_key_app_update_wifi">app_update_wifi</string>
    
    <string name="change_bus_from_hint">出发地址</string>
    <string name="change_bus_to_hint">目的地</string>
    <string name="change_bus_search">搜索</string>

    <string name="search_location_hint">搜索地址</string>

</resources>
