<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/pref_set">
        <Preference android:title="@string/pref_set_update"
            android:key="@string/preference_key_set_update">
        </Preference>

        <CheckBoxPreference android:title="@string/pref_app_update_wifi_only_title"
            android:key="@string/preference_key_app_update_wifi"
            android:defaultValue="false"
            android:summary="@string/pref_app_update_wifi_only_body"
            android:lineSpacingMultiplier="1.5"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_app">

        <Preference
            android:key="@string/preference_key_app_version"
            android:title="@string/app_name"/>

        <Preference android:title="@string/pref_app_code"
            android:summary="@string/pref_app_code_url">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_app_code_url"/>
        </Preference>

        <Preference android:title="@string/pref_app_update"
            android:summary="@string/app_update_url">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_update_url"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>